tests/snapshots/snapshots__pipeline@no_alloc_backslash.pr.snap
---
source: tests/snapshots.rs
expression: "prism::report(&src)"
input_file: tests/cases/no_alloc_backslash.pr
---
== tokens ==
VOpen Fn Ident("inc") LParen Ident("x") Colon KwInt RParen Colon KwInt Lambda Alloc Eq Ident("x") Plus Int(IntLit { value: 1, suffix: None }) VSemi Fn Ident("main") LParen RParen Colon KwInt Eq Ident("inc") LParen Int(IntLit { value: 41, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "inc",
            params: [
                Param {
                    name: "x",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Bin(
                    Add,
                    Spanned {
                        node: Var(
                            "x",
                        ),
                        span: 269..270,
                    },
                    Spanned {
                        node: Int(
                            IntLit {
                                value: 1,
                                suffix: None,
                            },
                        ),
                        span: 273..274,
                    },
                ),
                span: 269..274,
            },
            wheres: [],
            no_alloc: true,
            span: 237..274,
        },
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "inc",
                        ),
                        span: 294..297,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 41,
                                    suffix: None,
                                },
                            ),
                            span: 298..300,
                        },
                    ],
                ),
                span: 294..301,
            },
            wheres: [],
            span: 276..301,
        },
    ],
}

== types ==
inc : (Int) -> Int
main : () -> Int

== core (cbpv) ==
fn inc(x) =
  return x to t@0; return 1 to t@1; t@0 + t@1
fn main() =
  return 41 to t@2; inc(t@2)

== fbip (rc) ==
fn inc(x) =
  return x to t@0; return 1 to t@1; t@0 + t@1
fn main() =
  return 41 to t@2; inc(t@2)

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@.kont.shadow.prism_main = private constant [11 x i8] c"prism_main\00"
@prism_native_kont_table = constant [829 x i8] c"scheme  prism-core-hash-v1\0Abundle  638a99340b8494314c70dc40a8d2963360d9a3a4809eb18eb474bce50bd45afd\0Acompiler  0.8.0\0Atarget  aarch64-apple-darwin\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v1:638a99340b8494314c70dc40a8d2963360d9a3a4809eb18eb474bce50bd45afd\0Aflag  stdlib-root  prism-core-hash-v1:b19c086306ab35f35445114d09249f5ec1907259e92ded3dfefece53dca24e83\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  cek-spike  false\0Aflag  fuse  false\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prism_inc  404c51c8f8020a062a1891ab368e578dec87f58845579a7515914da5dfd40b9b  inc\0Afn      prism_main  453daa98268632e15335f29fed8859e542179b2071884bd12496ecd201abf024  main\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [933 x i8] c"state-map 1\0Ascheme  prism-core-hash-v1\0Abundle  638a99340b8494314c70dc40a8d2963360d9a3a4809eb18eb474bce50bd45afd\0Acompiler  0.8.0\0Atarget  aarch64-apple-darwin\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v1:638a99340b8494314c70dc40a8d2963360d9a3a4809eb18eb474bce50bd45afd\0Aflag  stdlib-root  prism-core-hash-v1:b19c086306ab35f35445114d09249f5ec1907259e92ded3dfefece53dca24e83\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  cek-spike  false\0Aflag  fuse  false\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prism_inc 404c51c8f8020a062a1891ab368e578dec87f58845579a7515914da5dfd40b9b inc arity 1 slots abi-word[arg0=%a0:word]\0Astate prism_main 453daa98268632e15335f29fed8859e542179b2071884bd12496ecd201abf024 main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol1 = private constant [11 x i8] c"prism_main\00"
@.kont_hash1 = private constant [65 x i8] c"453daa98268632e15335f29fed8859e542179b2071884bd12496ecd201abf024\00"
@.kont_name1 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prism_main, ptr @.kont_symbol1, ptr @.kont_hash1, ptr @.kont_name1 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prism_main() #0 {
entry:
  call void @prism_native_kont_enter(ptr @.kont.shadow.prism_main, i64 0)
  call void @prism_native_kont_leave()
  ret i64 85
}

; Function Attrs: nounwind
declare void @prism_native_kont_enter(ptr, i64) #0

; Function Attrs: nounwind
declare void @prism_native_kont_leave() #0

attributes #0 = { nounwind }

== run ==
output: []
result: 42
