tests/snapshots/snapshots__pipeline@no_alloc_ok.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/no_alloc_ok.pr
---
== tokens ==
VOpen Fn Ident("identity") LParen Ident("x") Colon KwInt RParen Colon KwInt At Ident("noalloc") Eq Ident("x") VSemi Fn Ident("twice") LParen Ident("x") Colon KwInt RParen Colon KwInt At Ident("noalloc") Eq Ident("identity") LParen Ident("identity") LParen Ident("x") RParen RParen VSemi Fn Ident("main") LParen RParen Colon KwInt Eq Ident("twice") LParen Int(IntLit { value: 40, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "identity",
            params: [
                Param {
                    name: "x",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Var(
                    "x",
                ),
                span: 109..110,
            },
            wheres: [],
            no_alloc: true,
            span: 70..110,
        },
        Decl {
            name: "twice",
            params: [
                Param {
                    name: "x",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "identity",
                        ),
                        span: 148..156,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "identity",
                                    ),
                                    span: 157..165,
                                },
                                [
                                    Spanned {
                                        node: Var(
                                            "x",
                                        ),
                                        span: 166..167,
                                    },
                                ],
                            ),
                            span: 157..168,
                        },
                    ],
                ),
                span: 148..169,
            },
            wheres: [],
            no_alloc: true,
            span: 112..169,
        },
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "twice",
                        ),
                        span: 189..194,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 40,
                                    suffix: None,
                                },
                            ),
                            span: 195..197,
                        },
                    ],
                ),
                span: 189..198,
            },
            wheres: [],
            span: 171..198,
        },
    ],
}

== types ==
identity : (Int) -> Int
twice : (Int) -> Int
main : () -> Int

== core (cbpv) ==
fn identity(x) =
  return x
fn twice(x) =
  return x to t@0
  identity(t@0) to t@1
  identity(t@1)
fn main() =
  return 40 to t@2
  twice(t@2)

== fbip (rc) ==
fn identity(x) =
  return x
fn twice(x) =
  return x to t@0
  identity(t@0) to t@1
  identity(t@1)
fn main() =
  return 40 to t@2
  twice(t@2)

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [901 x i8] c"scheme  prism-core-hash-v2\0Abundle  50f33bee36edc8cef254d9b2455e7c5a07f9023339e21c737f02cbe33b499087\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:50f33bee36edc8cef254d9b2455e7c5a07f9023339e21c737f02cbe33b499087\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_identity  8d0bbbcae2c3f1e1b984e17faf209a1ce6f55886e5c63a978fd48918faa4df0a  identity\0Afn      prismfn_main  6e18241156ba301d541822e1e644722a106e73c200b74ec3eb023f07dfd1cd61  main\0Afn      prismfn_twice  1c556c55249e9b5b183750cc13ebeac74523ef6e57b705645fc4a680c6a431ea  twice\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [1039 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  50f33bee36edc8cef254d9b2455e7c5a07f9023339e21c737f02cbe33b499087\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:50f33bee36edc8cef254d9b2455e7c5a07f9023339e21c737f02cbe33b499087\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_identity 8d0bbbcae2c3f1e1b984e17faf209a1ce6f55886e5c63a978fd48918faa4df0a identity arity 1 slots abi-word[arg0=%a0:word]\0Astate prismfn_main 6e18241156ba301d541822e1e644722a106e73c200b74ec3eb023f07dfd1cd61 main arity 0 slots abi-word[]\0Astate prismfn_twice 1c556c55249e9b5b183750cc13ebeac74523ef6e57b705645fc4a680c6a431ea twice arity 1 slots abi-word[arg0=%a0:word]\0A\00", section ",.prism_kont", align 1
@.kont_symbol1 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash1 = private constant [65 x i8] c"6e18241156ba301d541822e1e644722a106e73c200b74ec3eb023f07dfd1cd61\00"
@.kont_name1 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol1, ptr @.kont_hash1, ptr @.kont_name1 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  ret i64 81
}

attributes #0 = { nounwind }

== run ==
output: []
result: 40
