tests/snapshots/snapshots__pipeline@no_alloc_region.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/no_alloc_region.pr
---
== tokens ==
VOpen Fn Ident("tick_region") LParen Ident("base") Colon KwInt RParen Colon KwInt At Ident("noalloc") Eq Ident("base") VSemi Fn Ident("tick") LParen Ident("n") Colon KwInt RParen Colon KwInt Eq VOpen Let Ident("base") Eq Ident("n") Plus Int(IntLit { value: 1, suffix: None }) VSemi Ident("tick_region") LParen Ident("base") RParen VClose VSemi Fn Ident("main") LParen RParen Colon KwInt Eq Ident("tick") LParen Int(IntLit { value: 20, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "tick_region",
            params: [
                Param {
                    name: "base",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Var(
                    "base",
                ),
                span: 290..294,
            },
            wheres: [],
            no_alloc: true,
            span: 245..294,
        },
        Decl {
            name: "tick",
            params: [
                Param {
                    name: "n",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "base",
                    Spanned {
                        node: Bin(
                            Add,
                            Spanned {
                                node: Var(
                                    "n",
                                ),
                                span: 334..335,
                            },
                            Spanned {
                                node: Int(
                                    IntLit {
                                        value: 1,
                                        suffix: None,
                                    },
                                ),
                                span: 338..339,
                            },
                        ),
                        span: 334..339,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "tick_region",
                                ),
                                span: 342..353,
                            },
                            [
                                Spanned {
                                    node: Var(
                                        "base",
                                    ),
                                    span: 354..358,
                                },
                            ],
                        ),
                        span: 342..359,
                    },
                ),
                span: 323..359,
            },
            wheres: [],
            span: 296..359,
        },
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "tick",
                        ),
                        span: 379..383,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 20,
                                    suffix: None,
                                },
                            ),
                            span: 384..386,
                        },
                    ],
                ),
                span: 379..387,
            },
            wheres: [],
            span: 361..387,
        },
    ],
}

== types ==
tick_region : (Int) -> Int
tick : (Int) -> Int
main : () -> Int

== core (cbpv) ==
fn tick_region(base) =
  return base
fn tick(n) =
  return n to t@0
  return 1 to t@1
  t@0 + t@1 to base
  return base to t@2
  tick_region(t@2)
fn main() =
  return 20 to t@3
  tick(t@3)

== fbip (rc) ==
fn tick_region(base) =
  return base
fn tick(n) =
  return n to t@0
  return 1 to t@1
  dup t@0
  t@0 + t@1 to base
  return base to t@2
  tick_region(t@2)
fn main() =
  return 20 to t@3
  tick(t@3) to %rc0
  drop t@3
  return %rc0

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [905 x i8] c"scheme  prism-core-hash-v2\0Abundle  6b29149d3c2d33f48d61a65e3574461b778c461fbe280dc8a1291876471c2ce2\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:6b29149d3c2d33f48d61a65e3574461b778c461fbe280dc8a1291876471c2ce2\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_main  9a10ef39f1364df51ce91b9325ae3f966a209132b54b09addc18f46daae5ac07  main\0Afn      prismfn_tick  bdbbd58dcb55ed4babb0040438d29cae36bffb04b7c993dac2d3abf2c38b45a0  tick\0Afn      prismfn_tick_region  8d0bbbcae2c3f1e1b984e17faf209a1ce6f55886e5c63a978fd48918faa4df0a  tick_region\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [1043 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  6b29149d3c2d33f48d61a65e3574461b778c461fbe280dc8a1291876471c2ce2\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:6b29149d3c2d33f48d61a65e3574461b778c461fbe280dc8a1291876471c2ce2\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_main 9a10ef39f1364df51ce91b9325ae3f966a209132b54b09addc18f46daae5ac07 main arity 0 slots abi-word[]\0Astate prismfn_tick bdbbd58dcb55ed4babb0040438d29cae36bffb04b7c993dac2d3abf2c38b45a0 tick arity 1 slots abi-word[arg0=%a0:word]\0Astate prismfn_tick_region 8d0bbbcae2c3f1e1b984e17faf209a1ce6f55886e5c63a978fd48918faa4df0a tick_region arity 1 slots abi-word[arg0=%a0:word]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash0 = private constant [65 x i8] c"9a10ef39f1364df51ce91b9325ae3f966a209132b54b09addc18f46daae5ac07\00"
@.kont_name0 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  ret i64 43
}

attributes #0 = { nounwind }

== run ==
output: []
result: 21
