tests/snapshots/snapshots__pipeline@nonexhaustive.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/nonexhaustive.pr
---
== tokens ==
VOpen Type UIdent("Color") Eq UIdent("Red") Bar UIdent("Green") Bar UIdent("Blue") VSemi Fn Ident("name") LParen Ident("c") RParen Eq VOpen Match Ident("c") Of VOpen UIdent("Red") FatArrow Int(IntLit { value: 1, suffix: None }) VSemi UIdent("Green") FatArrow Int(IntLit { value: 2, suffix: None }) VClose VClose VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("name") LParen UIdent("Red") RParen RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Color",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Red",
                    args: [],
                    fields: None,
                    span: 13..16,
                },
                Ctor {
                    name: "Green",
                    args: [],
                    fields: None,
                    span: 19..24,
                },
                Ctor {
                    name: "Blue",
                    args: [],
                    fields: None,
                    span: 27..31,
                },
            ],
            deriving: [],
            newtype: false,
            span: 0..31,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "name",
            params: [
                Param {
                    name: "c",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "c",
                        ),
                        span: 54..55,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Red",
                                    [],
                                ),
                                span: 63..66,
                            },
                            body: Spanned {
                                node: Int(
                                    IntLit {
                                        value: 1,
                                        suffix: None,
                                    },
                                ),
                                span: 70..71,
                            },
                        },
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Green",
                                    [],
                                ),
                                span: 76..81,
                            },
                            body: Spanned {
                                node: Int(
                                    IntLit {
                                        value: 2,
                                        suffix: None,
                                    },
                                ),
                                span: 85..86,
                            },
                        },
                    ],
                ),
                span: 48..86,
            },
            wheres: [],
            span: 33..86,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 100..107,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "name",
                                    ),
                                    span: 108..112,
                                },
                                [
                                    Spanned {
                                        node: Var(
                                            "Red",
                                        ),
                                        span: 113..116,
                                    },
                                ],
                            ),
                            span: 108..117,
                        },
                    ],
                ),
                span: 100..118,
            },
            wheres: [],
            span: 88..118,
        },
    ],
}

== types ==
[E4001] Type Error: in `name`: non-exhaustive match: missing Blue
   ╭─[ <source>:4:3 ]
   │
 4 │ ╭─▶   match c of
   ┆ ┆   
 6 │ ├─▶     Green => 2
   │ │                    
   │ ╰──────────────────── in `name`: non-exhaustive match: missing Blue
───╯
